Emmie: Arrange books by person
